--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.username=marketadmin
 spring.datasource.password=Xpulse200@8035
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql= true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=foodchecklistapplication@gmail.com
+spring.mail.password=lfbkcyldonasjtjx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
