--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=marketzen
-server.port=5455
+server.port=5454
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/marketzen
 spring.datasource.username=marketadmin
@@ -13,3 +13,9 @@ spring.mail.username=foodchecklistapplication@gmail.com
 spring.mail.password=lfbkcyldonasjtjx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+stipe.api.key=tets
+razorpay.api.key=test
+razorpay.api.secret=fuygwegf
+
+logging.level.org.springframework=DEBUG
