--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 stipe.api.key=tets
-razorpay.api.key=test
-razorpay.api.secret=fuygwegf
+razorpay.api.key=rzp_test_g7Asu6R25KR73A
+razorpay.api.secret=TFTVyFpDEjJCbPM5B7RRxGRg
 
 logging.level.org.springframework=DEBUG
