--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ razorpay.api.key=rzp_test_g7Asu6R25KR73A
 razorpay.api.secret=TFTVyFpDEjJCbPM5B7RRxGRg
 
 logging.level.org.springframework=DEBUG
+
+coingecko.api.key=test
