Integration almost completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ razorpay.api.secret=TFTVyFpDEjJCbPM5B7RRxGRg
 
 logging.level.org.springframework=DEBUG
 
-coingecko.api.key=test
+coingecko.api.key=CG-QGao1fbgLokHSJEEPGjC7sRB
