--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,17 @@
             <artifactId>stripe-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.70</version> <!-- Check for the latest version -->
+        </dependency>
+
+
     </dependencies>
 
     <build>
