Integration of AI ChatBote on the CryptoCoin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ razorpay.api.secret=TFTVyFpDEjJCbPM5B7RRxGRg
 logging.level.org.springframework=DEBUG
 
 coingecko.api.key=CG-QGao1fbgLokHSJEEPGjC7sRB
+
+gemini.api.key=AIzaSyD6dAnP4U9GIPwRszeES_rC95YjkC-3OSc
