--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.70</version> <!-- Check for the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+
+        </dependency>
 
 
     </dependencies>
