--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=marketzen
+
+#frontend.url1=${FRONTEND_URL1}
+#frontend.url2=${FRONTEND_URL2}
+
 server.port=5454
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/marketzen
 spring.datasource.username=marketadmin
 spring.datasource.password=Xpulse200@8035
+#spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12750617
+#spring.datasource.username=sql12750617
+#spring.datasource.password=t4aI9Wn7tr
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql= true
 
