AI Messaging Stage 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ stipe.api.key=tets
 razorpay.api.key=rzp_test_g7Asu6R25KR73A
 razorpay.api.secret=TFTVyFpDEjJCbPM5B7RRxGRg
 
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 
 coingecko.api.key=CG-QGao1fbgLokHSJEEPGjC7sRB
 
